--- a/alacritty.toml
+++ b/alacritty.toml
@@ -4,7 +4,7 @@ draw_bold_text_with_bright_colors = true
 size = 9.0
 
 [font.normal]
-family = "BigBlue TerminalPlus"
+family = "BigBlueTerm436 Nerd Font Mono"
 style = "Regular"
 
 [font.offset]
